--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,46 +1,39 @@
-apparmor==4.0.3
-application-utility==1.4.0
-argcomplete==3.5.3
-attrs==23.2.1.dev0
-beautifulsoup4==4.12.3
-btrfsutil==6.13
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-configobj==5.0.9
-cryptography==44.0.2
-cupshelpers==1.0
-dbus-python==1.4.0
-defusedxml==0.7.1
-distlib==0.3.9
-duplicity==3.0.3
-fasteners==0.19
-filelock==3.18.0
-gufw==24.4.0
-idna==3.10
-layoutswitcherlib==0.8.39
-legacy-cgi==2.6.2
-LibAppArmor==4.0.3
-libfdt==1.7.2
-netsnmp-python==1.0a1
-nftables==0.1
-npyscreen==4.10.5
-packaging==24.2
-pacman_mirrors==4.27
-pillow==11.1.0
-platformdirs==4.3.6
-pwquality==1.4.5
-pycairo==1.27.0
-pycparser==2.22
-pycups==2.0.4
-PyGObject==3.52.3
-requests==2.32.3
-requests-file==2.1.0
-setproctitle==1.3.5
-soupsieve==2.6
-tldextract==5.1.3
-ufw==0.36.2
-urllib3==2.3.0
-validate==5.0.9
-virtualenv==20.28.0
-wheel==0.45.1
+name: Flask Chatbot CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - main  # Or master, depending on your default branch
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:  # Allows manual trigger
+
+jobs:
+  setup:
+    runs-on: ubuntu-latest  # Define the environment (Ubuntu)
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2  # Checkout the repository code
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Use Python 3.x
+
+      - name: Install dependencies from requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            echo "requirements.txt found, installing dependencies..."
+            pip install -r requirements.txt
+          else
+            echo "requirements.txt not found. Skipping dependency installation."
+          fi
+
+      - name: Run Flask app test
+        run: |
+          nohup flask run &
+          sleep 5  # Wait for the server to start
+          curl --fail http://127.0.0.1:5000/  # Ensure that the homepage responds correctly
