--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,74 +1,38 @@
-name: Flask Chatbot CI/CD Pipeline
+name: Deploy Flask App
 
 on:
   push:
     branches:
-      - main  # Change this to 'master' if you're using 'master' as the default branch
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:  # Allows manual trigger
+      - main  # change if using a different branch
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest  # This defines the environment (Ubuntu)
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Checkout the repository code
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'  # You can specify any Python version here
-
-      - name: Install dependencies from requirements.txt
-        run: |
-          python -m pip install --upgrade pip
-          # Ensure that requirements.txt exists at the root directory
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            echo "requirements.txt not found. Skipping dependency installation."
-          fi
-
-      - name: Run Flask app test
-        run: |
-          # Start Flask app and check if it's responding correctly (you may need to adjust this to fit your actual test)
-          nohup flask run &
-          sleep 5  # Wait for the server to start
-          curl --fail http://127.0.0.1:5000/  # Make sure the homepage is responding
-
-      - name: Run Flask app test for /get endpoint
-        run: |
-          curl --fail "http://127.0.0.1:5000/get?msg=Hello"  # Check if /get endpoint responds
-
   deploy:
-    runs-on: ubuntu-latest
-    needs: setup
-    if: success()  # Only deploy if setup job was successful
+    runs-on: [self-hosted, ec2]  # must match your runner tag
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: 3.10
 
-      - name: Install dependencies from requirements.txt
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            echo "requirements.txt not found. Skipping dependency installation."
-          fi
+          pip install -r requirements.txt
 
-      - name: Deploy Flask App
+      - name: Kill previous Flask process (if any)
         run: |
-          echo "Deploying Flask app..."
-          # Add your deployment logic here (e.g., to Heroku, AWS, etc.)
-          # This is just a placeholder command
-          # ./deploy.sh
+          pkill -f "python3 app.py" || true
+
+      - name: Start Flask app
+        run: |
+          nohup python3 app.py > flask.log 2>&1 &
+
+      - name: Wait for server to start
+        run: sleep 5
+
+      - name: Test Flask app is running
+        run: |
+          curl http://127.0.0.1:5000
