--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,13 +1,14 @@
-name: Deploy Flask App
+name: Run Flask App and Test
 
 on:
   push:
-    branches:
-      - main  # Change this if you use a different branch
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  run-flask-app:
-    runs-on: [self-hosted, ec2]  # This should match your runner's tag
+  test:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -20,18 +21,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          pip3 install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Start Flask app
+      - name: Run Flask app in background
         run: |
-          nohup python3 app.py > output.log 2>&1 &
-          sleep 5  # Wait for Flask to start
-
-      - name: Test root endpoint
-        run: |
-          curl --fail http://127.0.0.1:5000
+          nohup python app.py &
+          sleep 5
 
       - name: Test /get endpoint
         run: |
-          curl --fail "http://127.0.0.1:5000/get?msg=hello"
+          curl "http://127.0.0.1:5000/get?msg=hello"
