--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,4 +1,4 @@
-name: Run Flask App and Test
+name: Flask App CI/CD
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,8 +27,19 @@ jobs:
       - name: Run Flask app in background
         run: |
           nohup python app.py &
-          sleep 5
+          sleep 5  # Give the server time to start
 
-      - name: Test /get endpoint
+      - name: Test Flask endpoint
         run: |
-          curl "http://127.0.0.1:5000/get?msg=hello"
+          curl -f http://127.0.0.1:5000/
+          curl -f "http://127.0.0.1:5000/api/echo?msg=hello"
+
+  # Optional: Deploy job (example placeholder)
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Echo deploy step
+        run: echo "You can configure your deployment here (Heroku, AWS, etc.)"
