--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,17 +1,15 @@
-name: Flask App CI/CD
+name: Hello World Flask CI
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  build-and-test:
+  run-flask:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -21,25 +19,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Flask app in background
         run: |
           nohup python app.py &
-          sleep 5  # Give the server time to start
+          sleep 5  # Let Flask boot
 
-      - name: Test Flask endpoint
+      - name: Test Flask endpoint with curl
         run: |
           curl -f http://127.0.0.1:5000/
-          curl -f "http://127.0.0.1:5000/api/echo?msg=hello"
-
-  # Optional: Deploy job (example placeholder)
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Echo deploy step
-        run: echo "You can configure your deployment here (Heroku, AWS, etc.)"
