--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,15 +1,16 @@
-name: Hello World Flask CI
+name: Run Flask App Test
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  run-flask:
+  test-flask:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -19,13 +20,16 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Start Flask app in background
+      - name: Run Flask App
+        env:
+          FLASK_APP: app.py  # Replace with your Flask app filename
         run: |
-          nohup python app.py > flask.log 2>&1 &
-          sleep 5  # give it time to start
+          nohup flask run --host=127.0.0.1 --port=5000 &
+          sleep 5
 
-      - name: Test Flask root endpoint
+      - name: Test Homepage
         run: |
-          curl -f http://127.0.0.1:5000/
+          curl --fail http://127.0.0.1:5000
