--- a/.github/workflows/sam.yml
+++ b/.github/workflows/sam.yml
@@ -1,35 +1,17 @@
-name: Run Flask App Test
+name: Simple Hello World Workflow
 
-on:
+on: 
   push:
     branches:
       - main
 
 jobs:
-  test-flask:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Flask App
-        env:
-          FLASK_APP: app.py  # Replace with your Flask app filename
-        run: |
-          nohup flask run --host=127.0.0.1 --port=5000 &
-          sleep 5
-
-      - name: Test Homepage
-        run: |
-          curl --fail http://127.0.0.1:5000
+    - name: Print Hello World
+      run: echo "Hello, World!"
